--- a/ProcessOrdersWithRules/ProcessOrdersWithRules.Tests/ProcessOrdersWithRules.Tests.csproj
+++ b/ProcessOrdersWithRules/ProcessOrdersWithRules.Tests/ProcessOrdersWithRules.Tests.csproj
@@ -99,8 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Controllers\HomeControllerTest.cs" />
-    <Compile Include="Controllers\ValuesControllerTest.cs" />
+    <Compile Include="Controllers\BusinessRulesEngineControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
