--- a/ProcessOrdersWithRules/ProcessOrdersWithRules/ProcessOrdersWithRules.csproj
+++ b/ProcessOrdersWithRules/ProcessOrdersWithRules/ProcessOrdersWithRules.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Executables.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
